2006-03-10  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/vbe/vbe.c: (vbeProbeDDC):
	Coverity #1011: Remove a useless NULL check on a pVbe that had
	been dereferenced many times before.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/int10/generic.c: (xf86ExtendedInitInt10):
	Coverity #857: Fix resource leak in error path by freeing earlier.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/parser/Keyboard.c: (xf86parseKeyboardSection):
	* hw/xfree86/parser/Layout.c: (xf86parseLayoutSection):
	* hw/xfree86/parser/Pointer.c: (xf86parsePointerSection):
	Coverity #813, #814, #815, #816: Fix resource leaks in error paths of
	config parsing code.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.h:
	Document the restriction on PrepareAccess() failure, from discussion
	with benh.

2006-03-09  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/common/xf86Configure.c:
	Just like FreeBSD, let DragonFly's default mouse Device be
	/dev/sysmouse (since /dev/mouse don't even exist by default).

2006-03-09  Jeremy C. Reed  <reed@reedmedia.net>

	* hw/xfree86/os-support/bsd/bsd_mouse.c: (SupportedInterfaces),
	(DefaultProtocol), (SetSysMouseRes), (xf86OSMouseInit):
	Add DragonFly support. (It is like FreeBSD.) This patch is
	from DragonFly developer Joerg Sonnenberger and the pkgsrc
	collection.  (I tested using /dev/sysmouse with moused using
	serial /dev/cuaa0.)

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaComposite):
	Coverity #349: Fall back to software early if pSrc->pDrawable is NULL,
	or pMask is non-NULL but pMask->pDrawable is NULL.  This prevents NULL
	dereferences on gradients and other Pictures which have no pDrawable.

2006-03-09  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c:
	* exa/exa.h:
	* exa/exa_offscreen.c:
	* exa/exa_priv.h:
	* hw/xfree86/doc/devel/exa-driver.txt:
	Do a first pass of doxygen documentation of EXA.  This removes the